[package]
name = "srch"
version = "0.1.1"
authors = ["Mara Schulke <mara@schulke.xyz>"]
description = "Text Search For Humans"
edition = "2018"
repository = "https://github.com/mara-schulke/ter.git"
license = "MIT"
keywords = ["text-processing", "cli" ]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
sel = { path = "./sel" }
clap = "3.0.0"
