[package]
name = "srch"
version = "0.1.1"
authors = ["Mara Schulke <mara@schulke.xyz>"]
description = "Text Search For Humans"
edition = "2018"
repository = "https://github.com/mara-schulke/ter.git"
license = "MIT"
keywords = ["text-processing", "cli" ]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = "3.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
