[package]
name = "te"
version = "0.1.0"
description = "A really simple, stripped down & readable regular expression alternative for matching text"
authors = ["schulke-214 <hello@maximilianschulke.com>"]
edition = "2018"
homepage = "https://github.com/schulke-214/ter/tree/main/te"
repository = "https://github.com/schulke-214/ter.git"
license = "MIT"
license-file = "../LICENSE"
readme = "README.md"
keywords = ["text-processing", "language", "domain-specific-language"]

[dependencies]

[dev-dependencies]
pretty_assertions = "0.6.1"